--- a/nlog.config
+++ b/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <targets>
-        <target name="logfile" xsi:type="File" fileName="./logs/radioplayer.txt" />
+        <target name="logfile" xsi:type="File" fileName="./log/radioplayer.txt" />
         <target name="logconsole" xsi:type="Console" />
     </targets>
 
