--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -8,6 +8,7 @@
     "oidc-client": "^1.9.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "rimraf": "^2.6.2"
